y.output
Grammar

    0 $accept: document $end

    1 $@1: /* empty */

    2 $@2: /* empty */

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head body footer T_FinalTag T_html T_TagClose

    4 $@3: /* empty */

    5 header: T_Tag T_header T_TagClose $@3 text T_FinalTag T_header T_TagClose

    6 $@4: /* empty */

    7 head: T_Tag T_head T_TagClose $@4 title head_element T_FinalTag T_head T_TagClose

    8 $@5: /* empty */

    9 body: T_Tag T_body Atribute T_TagClose $@5 body_content T_FinalTag T_body T_TagClose

   10 $@6: /* empty */

   11 footer: T_Tag T_footer T_TagClose $@6 text T_FinalTag T_footer T_TagClose

   12 title: T_Tag T_title T_TagClose text T_FinalTag T_title T_TagClose

   13 head_element: script head_element
   14             | style head_element
   15             | META head_element
   16             | LINK head_element
   17             | epsilon

   18 script: T_Tag T_script Atribute T_TagClose text T_FinalTag T_script T_TagClose

   19 style: T_Tag T_style Atribute T_TagClose text T_FinalTag T_style T_TagClose

   20 META: T_Tag T_meta Atribute T_TagClose

   21 LINK: T_Tag T_link Atribute T_TagClose

   22 body_content: body_tag body_content
   23             | text

   24 body_tag: heading
   25         | block

   26 heading: h1
   27        | h2
   28        | h3
   29        | h4
   30        | h5
   31        | h6

   32 h1: T_Tag T_h1 Atribute T_TagClose text T_FinalTag T_h1 T_TagClose

   33 h2: T_Tag T_h2 Atribute T_TagClose text T_FinalTag T_h2 T_TagClose

   34 h3: T_Tag T_h3 Atribute T_TagClose text T_FinalTag T_h3 T_TagClose

   35 h4: T_Tag T_h4 Atribute T_TagClose text T_FinalTag T_h4 T_TagClose

   36 h5: T_Tag T_h5 Atribute T_TagClose text T_FinalTag T_h5 T_TagClose

   37 h6: T_Tag T_h6 Atribute T_TagClose text T_FinalTag T_h6 T_TagClose

   38 block: paragraph
   39      | list
   40      | preformatted
   41      | div
   42      | blockquote
   43      | HR
   44      | table
   45      | button
   46      | span
   47      | embed
   48      | object
   49      | comment
   50      | form
   51      | BR
   52      | IMG
   53      | bold
   54      | emphasize
   55      | strong
   56      | code
   57      | anchor

   58 paragraph: T_Tag T_p Atribute T_TagClose text T_FinalTag T_p T_TagClose

   59 list: unordered_list
   60     | ordered_list
   61     | def_list

   62 unordered_list: T_Tag T_ul Atribute T_TagClose list_item T_FinalTag T_ul T_TagClose

   63 ordered_list: T_Tag T_ol Atribute T_TagClose list_item T_FinalTag T_ol T_TagClose

   64 def_list: T_Tag T_dl Atribute T_TagClose def_list_item T_FinalTag T_dl T_TagClose

   65 list_item: T_Tag T_li Atribute T_TagClose text T_FinalTag T_li T_TagClose list_item
   66          | T_Tag T_li Atribute T_TagClose list T_FinalTag T_li T_TagClose list_item
   67          | epsilon

   68 def_list_item: dt def_list_item
   69              | dd def_list_item
   70              | epsilon

   71 dt: T_Tag T_dt T_TagClose text T_FinalTag T_dt T_TagClose

   72 dd: T_Tag T_dd T_TagClose text T_FinalTag T_dd T_TagClose

   73 preformatted: T_Tag T_pre T_TagClose text T_FinalTag T_pre T_TagClose

   74 div: T_Tag T_div Atribute T_TagClose body_content T_FinalTag T_div T_TagClose

   75 blockquote: T_Tag T_blockquote Atribute T_TagClose block T_FinalTag T_blockquote T_TagClose

   76 form: T_Tag T_form Atribute T_TagClose form_field T_FinalTag T_form T_TagClose

   77 form_field: INPUT form_field
   78           | select form_field
   79           | textarea form_field
   80           | epsilon

   81 INPUT: T_Tag T_input Atribute T_TagClose

   82 select: T_Tag T_select Atribute T_TagClose select_option T_FinalTag T_select T_TagClose

   83 select_option: T_Tag T_option Atribute T_TagClose text T_FinalTag T_option T_TagClose select_option
   84              | epsilon

   85 textarea: T_Tag T_textarea Atribute T_TagClose text T_FinalTag T_textarea T_TagClose

   86 BR: T_Tag T_br Atribute T_TagClose

   87 HR: T_Tag T_hr Atribute T_TagClose

   88 IMG: T_Tag T_img Atribute T_TagClose

   89 table: T_Tag T_table Atribute T_TagClose caption tr T_FinalTag T_table T_TagClose

   90 caption: T_Tag T_caption Atribute T_TagClose text T_FinalTag T_caption T_TagClose

   91 tr: T_Tag T_tr Atribute T_TagClose th_or_td T_FinalTag T_tr T_TagClose tr
   92   | epsilon

   93 th_or_td: T_Tag T_th T_TagClose body_content T_FinalTag T_th T_TagClose
   94         | T_Tag T_td T_TagClose body_content T_FinalTag T_td T_TagClose

   95 bold: T_Tag T_b T_TagClose text T_FinalTag T_b T_TagClose

   96 emphasize: T_Tag T_em T_TagClose text T_FinalTag T_em T_TagClose

   97 strong: T_Tag T_strong T_TagClose text T_FinalTag T_strong T_TagClose

   98 code: T_Tag T_code T_TagClose text T_FinalTag T_code T_TagClose

   99 anchor: T_Tag T_a Atribute T_TagClose text T_FinalTag T_a T_TagClose

  100 button: T_Tag T_button Atribute T_TagClose text T_FinalTag T_button T_TagClose

  101 span: T_Tag T_span Atribute T_TagClose text T_FinalTag T_span T_TagClose

  102 embed: T_Tag T_embed Atribute T_TagClose text T_FinalTag T_embed T_TagClose

  103 object: T_Tag T_object Atribute T_TagClose text T_FinalTag T_object T_TagClose

  104 comment: T_comment_open body_content T_comment_close

  105 text: T_IDENT text
  106     | epsilon

  107 Atribute: T_ATT Atribute
  108         | epsilon

  109 epsilon: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
T_a (258) 99
T_b (259) 95
T_blockquote (260) 75
T_body (261) 9
T_br (262) 86
T_button (263) 100
T_caption (264) 90
T_code (265) 98
T_div (266) 74
T_dl (267) 64
T_dt (268) 71
T_dd (269) 72
T_em (270) 96
T_embed (271) 102
T_footer (272) 11
T_form (273) 76
T_h1 (274) 32
T_h2 (275) 33
T_h3 (276) 34
T_h4 (277) 35
T_h5 (278) 36
T_h6 (279) 37
T_head (280) 7
T_header (281) 5
T_hr (282) 87
T_html (283) 3
T_img (284) 88
T_input (285) 81
T_li (286) 65 66
T_link (287) 21
T_meta (288) 20
T_object (289) 103
T_ol (290) 63
T_option (291) 83
T_p (292) 58
T_pre (293) 73
T_script (294) 18
T_span (295) 101
T_strong (296) 97
T_style (297) 19
T_select (298) 82
T_table (299) 89
T_td (300) 94
T_th (301) 93
T_title (302) 12
T_tr (303) 91
T_textarea (304) 85
T_ul (305) 62
T_DOCTYPE (306) 3
T_IDENT (307) 105
T_ATT (308) 107
T_Tag (309) 3 5 7 9 11 12 18 19 20 21 32 33 34 35 36 37 58 62 63 64
    65 66 71 72 73 74 75 76 81 82 83 85 86 87 88 89 90 91 93 94 95
    96 97 98 99 100 101 102 103
T_TagClose (310) 3 5 7 9 11 12 18 19 20 21 32 33 34 35 36 37 58 62
    63 64 65 66 71 72 73 74 75 76 81 82 83 85 86 87 88 89 90 91 93
    94 95 96 97 98 99 100 101 102 103
T_FinalTag (311) 3 5 7 9 11 12 18 19 32 33 34 35 36 37 58 62 63 64
    65 66 71 72 73 74 75 76 82 83 85 89 90 91 93 94 95 96 97 98 99
    100 101 102 103
T_comment_open (312) 104
T_comment_close (313) 104


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
document (60)
    on left: 3, on right: 0
$@1 (61)
    on left: 1, on right: 3
$@2 (62)
    on left: 2, on right: 3
header (63)
    on left: 5, on right: 3
$@3 (64)
    on left: 4, on right: 5
head (65)
    on left: 7, on right: 3
$@4 (66)
    on left: 6, on right: 7
body (67)
    on left: 9, on right: 3
$@5 (68)
    on left: 8, on right: 9
footer (69)
    on left: 11, on right: 3
$@6 (70)
    on left: 10, on right: 11
title (71)
    on left: 12, on right: 7
head_element (72)
    on left: 13 14 15 16 17, on right: 7 13 14 15 16
script (73)
    on left: 18, on right: 13
style (74)
    on left: 19, on right: 14
META (75)
    on left: 20, on right: 15
LINK (76)
    on left: 21, on right: 16
body_content (77)
    on left: 22 23, on right: 9 22 74 93 94 104
body_tag (78)
    on left: 24 25, on right: 22
heading (79)
    on left: 26 27 28 29 30 31, on right: 24
h1 (80)
    on left: 32, on right: 26
h2 (81)
    on left: 33, on right: 27
h3 (82)
    on left: 34, on right: 28
h4 (83)
    on left: 35, on right: 29
h5 (84)
    on left: 36, on right: 30
h6 (85)
    on left: 37, on right: 31
block (86)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57, on right: 25 75
paragraph (87)
    on left: 58, on right: 38
list (88)
    on left: 59 60 61, on right: 39 66
unordered_list (89)
    on left: 62, on right: 59
ordered_list (90)
    on left: 63, on right: 60
def_list (91)
    on left: 64, on right: 61
list_item (92)
    on left: 65 66 67, on right: 62 63 65 66
def_list_item (93)
    on left: 68 69 70, on right: 64 68 69
dt (94)
    on left: 71, on right: 68
dd (95)
    on left: 72, on right: 69
preformatted (96)
    on left: 73, on right: 40
div (97)
    on left: 74, on right: 41
blockquote (98)
    on left: 75, on right: 42
form (99)
    on left: 76, on right: 50
form_field (100)
    on left: 77 78 79 80, on right: 76 77 78 79
INPUT (101)
    on left: 81, on right: 77
select (102)
    on left: 82, on right: 78
select_option (103)
    on left: 83 84, on right: 82 83
textarea (104)
    on left: 85, on right: 79
BR (105)
    on left: 86, on right: 51
HR (106)
    on left: 87, on right: 43
IMG (107)
    on left: 88, on right: 52
table (108)
    on left: 89, on right: 44
caption (109)
    on left: 90, on right: 89
tr (110)
    on left: 91 92, on right: 89 91
th_or_td (111)
    on left: 93 94, on right: 91
bold (112)
    on left: 95, on right: 53
emphasize (113)
    on left: 96, on right: 54
strong (114)
    on left: 97, on right: 55
code (115)
    on left: 98, on right: 56
anchor (116)
    on left: 99, on right: 57
button (117)
    on left: 100, on right: 45
span (118)
    on left: 101, on right: 46
embed (119)
    on left: 102, on right: 47
object (120)
    on left: 103, on right: 48
comment (121)
    on left: 104, on right: 49
text (122)
    on left: 105 106, on right: 5 11 12 18 19 23 32 33 34 35 36 37
    58 65 71 72 73 83 85 90 95 96 97 98 99 100 101 102 103 105
Atribute (123)
    on left: 107 108, on right: 9 18 19 20 21 32 33 34 35 36 37 58
    62 63 64 65 66 74 75 76 81 82 83 85 86 87 88 89 90 91 99 100 101
    102 103 107
epsilon (124)
    on left: 109, on right: 17 67 70 80 84 92 106 108


State 0

    0 $accept: . document $end

    T_Tag  shift, and go to state 1

    document  go to state 2


State 1

    3 document: T_Tag . T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head body footer T_FinalTag T_html T_TagClose

    T_DOCTYPE  shift, and go to state 3


State 2

    0 $accept: document . $end

    $end  shift, and go to state 4


State 3

    3 document: T_Tag T_DOCTYPE . T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head body footer T_FinalTag T_html T_TagClose

    T_html  shift, and go to state 5


State 4

    0 $accept: document $end .

    $default  accept


State 5

    3 document: T_Tag T_DOCTYPE T_html . T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head body footer T_FinalTag T_html T_TagClose

    T_TagClose  shift, and go to state 6


State 6

    3 document: T_Tag T_DOCTYPE T_html T_TagClose . $@1 T_Tag T_html T_TagClose $@2 header head body footer T_FinalTag T_html T_TagClose

    $default  reduce using rule 1 ($@1)

    $@1  go to state 7


State 7

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 . T_Tag T_html T_TagClose $@2 header head body footer T_FinalTag T_html T_TagClose

    T_Tag  shift, and go to state 8


State 8

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag . T_html T_TagClose $@2 header head body footer T_FinalTag T_html T_TagClose

    T_html  shift, and go to state 9


State 9

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html . T_TagClose $@2 header head body footer T_FinalTag T_html T_TagClose

    T_TagClose  shift, and go to state 10


State 10

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose . $@2 header head body footer T_FinalTag T_html T_TagClose

    $default  reduce using rule 2 ($@2)

    $@2  go to state 11


State 11

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 . header head body footer T_FinalTag T_html T_TagClose

    T_Tag  shift, and go to state 12

    header  go to state 13


State 12

    5 header: T_Tag . T_header T_TagClose $@3 text T_FinalTag T_header T_TagClose

    T_header  shift, and go to state 14


State 13

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header . head body footer T_FinalTag T_html T_TagClose

    T_Tag  shift, and go to state 15

    head  go to state 16


State 14

    5 header: T_Tag T_header . T_TagClose $@3 text T_FinalTag T_header T_TagClose

    T_TagClose  shift, and go to state 17


State 15

    7 head: T_Tag . T_head T_TagClose $@4 title head_element T_FinalTag T_head T_TagClose

    T_head  shift, and go to state 18


State 16

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head . body footer T_FinalTag T_html T_TagClose

    T_Tag  shift, and go to state 19

    body  go to state 20


State 17

    5 header: T_Tag T_header T_TagClose . $@3 text T_FinalTag T_header T_TagClose

    $default  reduce using rule 4 ($@3)

    $@3  go to state 21


State 18

    7 head: T_Tag T_head . T_TagClose $@4 title head_element T_FinalTag T_head T_TagClose

    T_TagClose  shift, and go to state 22


State 19

    9 body: T_Tag . T_body Atribute T_TagClose $@5 body_content T_FinalTag T_body T_TagClose

    T_body  shift, and go to state 23


State 20

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head body . footer T_FinalTag T_html T_TagClose

    T_Tag  shift, and go to state 24

    footer  go to state 25


State 21

    5 header: T_Tag T_header T_TagClose $@3 . text T_FinalTag T_header T_TagClose

    T_IDENT  shift, and go to state 26

    $default  reduce using rule 109 (epsilon)

    text     go to state 27
    epsilon  go to state 28


State 22

    7 head: T_Tag T_head T_TagClose . $@4 title head_element T_FinalTag T_head T_TagClose

    $default  reduce using rule 6 ($@4)

    $@4  go to state 29


State 23

    9 body: T_Tag T_body . Atribute T_TagClose $@5 body_content T_FinalTag T_body T_TagClose

    T_ATT  shift, and go to state 30

    $default  reduce using rule 109 (epsilon)

    Atribute  go to state 31
    epsilon   go to state 32


State 24

   11 footer: T_Tag . T_footer T_TagClose $@6 text T_FinalTag T_footer T_TagClose

    T_footer  shift, and go to state 33


State 25

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head body footer . T_FinalTag T_html T_TagClose

    T_FinalTag  shift, and go to state 34


State 26

  105 text: T_IDENT . text

    T_IDENT  shift, and go to state 26

    $default  reduce using rule 109 (epsilon)

    text     go to state 35
    epsilon  go to state 28


State 27

    5 header: T_Tag T_header T_TagClose $@3 text . T_FinalTag T_header T_TagClose

    T_FinalTag  shift, and go to state 36


State 28

  106 text: epsilon .

    $default  reduce using rule 106 (text)


State 29

    7 head: T_Tag T_head T_TagClose $@4 . title head_element T_FinalTag T_head T_TagClose

    T_Tag  shift, and go to state 37

    title  go to state 38


State 30

  107 Atribute: T_ATT . Atribute

    T_ATT  shift, and go to state 30

    $default  reduce using rule 109 (epsilon)

    Atribute  go to state 39
    epsilon   go to state 32


State 31

    9 body: T_Tag T_body Atribute . T_TagClose $@5 body_content T_FinalTag T_body T_TagClose

    T_TagClose  shift, and go to state 40


State 32

  108 Atribute: epsilon .

    $default  reduce using rule 108 (Atribute)


State 33

   11 footer: T_Tag T_footer . T_TagClose $@6 text T_FinalTag T_footer T_TagClose

    T_TagClose  shift, and go to state 41


State 34

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head body footer T_FinalTag . T_html T_TagClose

    T_html  shift, and go to state 42


State 35

  105 text: T_IDENT text .

    $default  reduce using rule 105 (text)


State 36

    5 header: T_Tag T_header T_TagClose $@3 text T_FinalTag . T_header T_TagClose

    T_header  shift, and go to state 43


State 37

   12 title: T_Tag . T_title T_TagClose text T_FinalTag T_title T_TagClose

    T_title  shift, and go to state 44


State 38

    7 head: T_Tag T_head T_TagClose $@4 title . head_element T_FinalTag T_head T_TagClose

    T_Tag  shift, and go to state 45

    $default  reduce using rule 109 (epsilon)

    head_element  go to state 46
    script        go to state 47
    style         go to state 48
    META          go to state 49
    LINK          go to state 50
    epsilon       go to state 51


State 39

  107 Atribute: T_ATT Atribute .

    $default  reduce using rule 107 (Atribute)


State 40

    9 body: T_Tag T_body Atribute T_TagClose . $@5 body_content T_FinalTag T_body T_TagClose

    $default  reduce using rule 8 ($@5)

    $@5  go to state 52


State 41

   11 footer: T_Tag T_footer T_TagClose . $@6 text T_FinalTag T_footer T_TagClose

    $default  reduce using rule 10 ($@6)

    $@6  go to state 53


State 42

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head body footer T_FinalTag T_html . T_TagClose

    T_TagClose  shift, and go to state 54


State 43

    5 header: T_Tag T_header T_TagClose $@3 text T_FinalTag T_header . T_TagClose

    T_TagClose  shift, and go to state 55


State 44

   12 title: T_Tag T_title . T_TagClose text T_FinalTag T_title T_TagClose

    T_TagClose  shift, and go to state 56


State 45

   18 script: T_Tag . T_script Atribute T_TagClose text T_FinalTag T_script T_TagClose
   19 style: T_Tag . T_style Atribute T_TagClose text T_FinalTag T_style T_TagClose
   20 META: T_Tag . T_meta Atribute T_TagClose
   21 LINK: T_Tag . T_link Atribute T_TagClose

    T_link    shift, and go to state 57
    T_meta    shift, and go to state 58
    T_script  shift, and go to state 59
    T_style   shift, and go to state 60


State 46

    7 head: T_Tag T_head T_TagClose $@4 title head_element . T_FinalTag T_head T_TagClose

    T_FinalTag  shift, and go to state 61


State 47

   13 head_element: script . head_element

    T_Tag  shift, and go to state 45

    $default  reduce using rule 109 (epsilon)

    head_element  go to state 62
    script        go to state 47
    style         go to state 48
    META          go to state 49
    LINK          go to state 50
    epsilon       go to state 51


State 48

   14 head_element: style . head_element

    T_Tag  shift, and go to state 45

    $default  reduce using rule 109 (epsilon)

    head_element  go to state 63
    script        go to state 47
    style         go to state 48
    META          go to state 49
    LINK          go to state 50
    epsilon       go to state 51


State 49

   15 head_element: META . head_element

    T_Tag  shift, and go to state 45

    $default  reduce using rule 109 (epsilon)

    head_element  go to state 64
    script        go to state 47
    style         go to state 48
    META          go to state 49
    LINK          go to state 50
    epsilon       go to state 51


State 50

   16 head_element: LINK . head_element

    T_Tag  shift, and go to state 45

    $default  reduce using rule 109 (epsilon)

    head_element  go to state 65
    script        go to state 47
    style         go to state 48
    META          go to state 49
    LINK          go to state 50
    epsilon       go to state 51


State 51

   17 head_element: epsilon .

    $default  reduce using rule 17 (head_element)


State 52

    9 body: T_Tag T_body Atribute T_TagClose $@5 . body_content T_FinalTag T_body T_TagClose

    T_IDENT         shift, and go to state 26
    T_Tag           shift, and go to state 66
    T_comment_open  shift, and go to state 67

    $default  reduce using rule 109 (epsilon)

    body_content    go to state 68
    body_tag        go to state 69
    heading         go to state 70
    h1              go to state 71
    h2              go to state 72
    h3              go to state 73
    h4              go to state 74
    h5              go to state 75
    h6              go to state 76
    block           go to state 77
    paragraph       go to state 78
    list            go to state 79
    unordered_list  go to state 80
    ordered_list    go to state 81
    def_list        go to state 82
    preformatted    go to state 83
    div             go to state 84
    blockquote      go to state 85
    form            go to state 86
    BR              go to state 87
    HR              go to state 88
    IMG             go to state 89
    table           go to state 90
    bold            go to state 91
    emphasize       go to state 92
    strong          go to state 93
    code            go to state 94
    anchor          go to state 95
    button          go to state 96
    span            go to state 97
    embed           go to state 98
    object          go to state 99
    comment         go to state 100
    text            go to state 101
    epsilon         go to state 28


State 53

   11 footer: T_Tag T_footer T_TagClose $@6 . text T_FinalTag T_footer T_TagClose

    T_IDENT  shift, and go to state 26

    $default  reduce using rule 109 (epsilon)

    text     go to state 102
    epsilon  go to state 28


State 54

    3 document: T_Tag T_DOCTYPE T_html T_TagClose $@1 T_Tag T_html T_TagClose $@2 header head body footer T_FinalTag T_html T_TagClose .

    $default  reduce using rule 3 (document)


State 55

    5 header: T_Tag T_header T_TagClose $@3 text T_FinalTag T_header T_TagClose .

    $default  reduce using rule 5 (header)


State 56

   12 title: T_Tag T_title T_TagClose . text T_FinalTag T_title T_TagClose

    T_IDENT  shift, and go to state 26

    $default  reduce using rule 109 (epsilon)

    text     go to state 103
    epsilon  go to state 28


State 57

   21 LINK: T_Tag T_link . Atribute T_TagClose

    T_ATT  shift, and go to state 30

    $default  reduce using rule 109 (epsilon)

    Atribute  go to state 104
    epsilon   go to state 32


State 58

   20 META: T_Tag T_meta . Atribute T_TagClose

    T_ATT  shift, and go to state 30

    $default  reduce using rule 109 (epsilon)

    Atribute  go to state 105
    epsilon   go to state 32


State 59

   18 script: T_Tag T_script . Atribute T_TagClose text T_FinalTag T_script T_TagClose

    T_ATT  shift, and go to state 30

    $default  reduce using rule 109 (epsilon)

    Atribute  go to state 106
    epsilon   go to state 32


State 60

   19 style: T_Tag T_style . Atribute T_TagClose text T_FinalTag T_style T_TagClose

    T_ATT  shift, and go to state 30

    $default  reduce using rule 109 (epsilon)

    Atribute  go to state 107
    epsilon   go to state 32


State 61

    7 head: T_Tag T_head T_TagClose $@4 title head_element T_FinalTag . T_head T_TagClose

    T_head  shift, and go to state 108


State 62

   13 head_element: script head_element .

    $default  reduce using rule 13 (head_element)


State 63

   14 head_element: style head_element .

    $default  reduce using rule 14 (head_element)


State 64

   15 head_element: META head_element .

    $default  reduce using rule 15 (head_element)


State 65

   16 head_element: LINK head_element .

    $default  reduce using rule 16 (head_element)


State 66

   32 h1: T_Tag . T_h1 Atribute T_TagClose text T_FinalTag T_h1 T_TagClose
   33 h2: T_Tag . T_h2 Atribute T_TagClose text T_FinalTag T_h2 T_TagClose
   34 h3: T_Tag . T_h3 Atribute T_TagClose text T_FinalTag T_h3 T_TagClose
   35 h4: T_Tag . T_h4 Atribute T_TagClose text T_FinalTag T_h4 T_TagClose
   36 h5: T_Tag . T_h5 Atribute T_TagClose text T_FinalTag T_h5 T_TagClose
   37 h6: T_Tag . T_h6 Atribute T_TagClose text T_FinalTag T_h6 T_TagClose
   58 paragraph: T_Tag . T_p Atribute T_TagClose text T_FinalTag T_p T_TagClose
   62 unordered_list: T_Tag . T_ul Atribute T_TagClose list_item T_FinalTag T_ul T_TagClose
   63 ordered_list: T_Tag . T_ol Atribute T_TagClose list_item T_FinalTag T_ol T_TagClose
   64 def_list: T_Tag . T_dl Atribute T_TagClose def_list_item T_FinalTag T_dl T_TagClose
   73 preformatted: T_Tag . T_pre T_TagClose text T_FinalTag T_pre T_TagClose
   74 div: T_Tag . T_div Atribute T_TagClose body_content T_FinalTag T_div T_TagClose
   75 blockquote: T_Tag . T_blockquote Atribute T_TagClose block T_FinalTag T_blockquote T_TagClose
   76 form: T_Tag . T_form Atribute T_TagClose form_field T_FinalTag T_form T_TagClose
   86 BR: T_Tag . T_br Atribute T_TagClose
   87 HR: T_Tag . T_hr Atribute T_TagClose
   88 IMG: T_Tag . T_img Atribute T_TagClose
   89 table: T_Tag . T_table Atribute T_TagClose caption tr T_FinalTag T_table T_TagClose
   95 bold: T_Tag . T_b T_TagClose text T_FinalTag T_b T_TagClose
   96 emphasize: T_Tag . T_em T_TagClose text T_FinalTag T_em T_TagClose
   97 strong: T_Tag . T_strong T_TagClose text T_FinalTag T_strong T_TagClose
   98 code: T_Tag . T_code T_TagClose text T_FinalTag T_code T_TagClose
   99 anchor: T_Tag . T_a Atribute T_TagClose text T_FinalTag T_a T_TagClose
  100 button: T_Tag . T_button Atribute T_TagClose text T_FinalTag T_button T_TagClose
  101 span: T_Tag . T_span Atribute T_TagClose text T_FinalTag T_span T_TagClose
  102 embed: T_Tag . T_embed Atribute T_TagClose text T_FinalTag T_embed T_TagClose
  103 object: T_Tag . T_object Atribute T_TagClose text T_FinalTag T_object T_TagClose

    T_a           shift, and go to state 109
    T_b           shift, and go to state 110
    T_blockquote  shift, and go to state 111
    T_br          shift, and go to state 112
    T_button      shift, and go to state 113
    T_code        shift, and go to state 114
    T_div         shift, and go to state 115
    T_dl          shift, and go to state 116
    T_em          shift, and go to state 117
    T_embed       shift, and go to state 118
    T_form        shift, and go to state 119
    T_h1          shift, and go to state 120
    T_h2          shift, and go to state 121
    T_h3          shift, and go to state 122
    T_h4          shift, and go to state 123
    T_h5          shift, and go to state 124
    T_h6          shift, and go to state 125
    T_hr          shift, and go to state 126
    T_img         shift, and go to state 127
    T_object      shift, and go to state 128
    T_ol          shift, and go to state 129
    T_p           shift, and go to state 130
    T_pre         shift, and go to state 131
    T_span        shift, and go to state 132
    T_strong      shift, and go to state 133
    T_table       shift, and go to state 134
    T_ul          shift, and go to state 135


State 67

  104 comment: T_comment_open . body_content T_comment_close

    T_IDENT         shift, and go to state 26
    T_Tag           shift, and go to state 66
    T_comment_open  shift, and go to state 67

    $default  reduce using rule 109 (epsilon)

    body_content    go to state 136
    body_tag        go to state 69
    heading         go to state 70
    h1              go to state 71
    h2              go to state 72
    h3              go to state 73
    h4              go to state 74
    h5              go to state 75
    h6              go to state 76
    block           go to state 77
    paragraph       go to state 78
    list            go to state 79
    unordered_list  go to state 80
    ordered_list    go to state 81
    def_list        go to state 82
    preformatted    go to state 83
    div             go to state 84
    blockquote      go to state 85
    form            go to state 86
    BR              go to state 87
    HR              go to state 88
    IMG             go to state 89
    table           go to state 90
    bold            go to state 91
    emphasize       go to state 92
    strong          go to state 93
    code            go to state 94
    anchor          go to state 95
    button          go to state 96
    span            go to state 97
    embed           go to state 98
    object          go to state 99
    comment         go to state 100
    text            go to state 101
    epsilon         go to state 28


State 68

    9 body: T_Tag T_body Atribute T_TagClose $@5 body_content . T_FinalTag T_body T_TagClose

    T_FinalTag  shift, and go to state 137


State 69

   22 body_content: body_tag . body_content

    T_IDENT         shift, and go to state 26
    T_Tag           shift, and go to state 66
    T_comment_open  shift, and go to state 67

    $default  reduce using rule 109 (epsilon)

    body_content    go to state 138
    body_tag        go to state 69
    heading         go to state 70
    h1              go to state 71
    h2              go to state 72
    h3              go to state 73
    h4              go to state 74
    h5              go to state 75
    h6              go to state 76
    block           go to state 77
    paragraph       go to state 78
    list            go to state 79
    unordered_list  go to state 80
    ordered_list    go to state 81
    def_list        go to state 82
    preformatted    go to state 83
    div             go to state 84
    blockquote      go to state 85
    form            go to state 86
    BR              go to state 87
    HR              go to state 88
    IMG             go to state 89
    table           go to state 90
    bold            go to state 91
    emphasize       go to state 92
    strong          go to state 93
    code            go to state 94
    anchor          go to state 95
    button          go to state 96
    span            go to state 97
    embed           go to state 98
    object          go to state 99
    comment         go to state 100
    text            go to state 101
    epsilon         go to state 28


State 70

   24 body_tag: heading .

    $default  reduce using rule 24 (body_tag)


State 71

   26 heading: h1 .

    $default  reduce using rule 26 (heading)


State 72

   27 heading: h2 .

    $default  reduce using rule 27 (heading)


State 73

   28 heading: h3 .

    $default  reduce using rule 28 (heading)


State 74

   29 heading: h4 .

    $default  reduce using rule 29 (heading)


State 75

   30 heading: h5 .

    $default  reduce using rule 30 (heading)


State 76

   31 heading: h6 .

    $default  reduce using rule 31 (heading)


State 77

   25 body_tag: block .

    $default  reduce using rule 25 (body_tag)


State 78

   38 block: paragraph .

    $default  reduce using rule 38 (block)


State 79

   39 block: list .

    $default  reduce using rule 39 (block)


State 80

   59 list: unordered_list .

    $default  reduce using rule 59 (list)


State 81

   60 list: ordered_list .

    $default  reduce using rule 60 (list)


State 82

   61 list: def_list .

    $default  reduce using rule 61 (list)


State 83

   40 block: preformatted .

    $default  reduce using rule 40 (block)


State 84

   41 block: div .

    $default  reduce using rule 41 (block)


State 85

   42 block: blockquote .

    $default  reduce using rule 42 (block)


State 86

   50 block: form .

    $default  reduce using rule 50 (block)


State 87

   51 block: BR .

    $default  reduce using rule 51 (block)


State 88

   43 block: HR .

    $default  reduce using rule 43 (block)


State 89

   52 block: IMG .

    $default  reduce using rule 52 (block)


State 90

   44 block: table .

    $default  reduce using rule 44 (block)


State 91

   53 block: bold .

    $default  reduce using rule 53 (block)


State 92

   54 block: emphasize .

    $default  reduce using rule 54 (block)


State 93

   55 block: strong .

    $default  reduce using rule 55 (block)


State 94

   56 block: code .

    $default  reduce using rule 56 (block)


State 95

   57 block: anchor .

    $default  reduce using rule 57 (block)


State 96

   45 block: button .

    $default  reduce using rule 45 (block)


State 97

   46 block: span .

    $default  reduce using rule 46 (block)


State 98

   47 block: embed .

    $default  reduce using rule 47 (block)


State 99

   48 block: object .

    $default  reduce using rule 48 (block)


State 100

   49 block: comment .

    $default  reduce using rule 49 (block)


State 101

   23 body_content: text .

    $default  reduce using rule 23 (body_content)


State 102

   11 footer: T_Tag T_footer T_TagClose $@6 text . T_FinalTag T_footer T_TagClose

    T_FinalTag  shift, and go to state 139


State 103

   12 title: T_Tag T_title T_TagClose text . T_FinalTag T_title T_TagClose

    T_FinalTag  shift, and go to state 140


State 104

   21 LINK: T_Tag T_link Atribute . T_TagClose

    T_TagClose  shift, and go to state 141


State 105

   20 META: T_Tag T_meta Atribute . T_TagClose

    T_TagClose  shift, and go to state 142


State 106

   18 script: T_Tag T_script Atribute . T_TagClose text T_FinalTag T_script T_TagClose
